# Logo_detector

./: CMakeLists.txt  ColorAreasFinder.cpp  ColorAreasFinder.h  DetectedObjects.cpp  DetectedObjects.h  FeaturesExtractor.cpp  FeaturesExtractor.h  FiltrationMaker.cpp  FiltrationMaker.h  LogoDetector.cpp  LogoDetector.h  ObjectFeatures.cpp  ObjectFeatures.h  ObjectsAnalyzer.cpp  ObjectsAnalyzer.h  ObjectsFeatures.cpp  ObjectsFeatures.h  PictureReader.cpp  PictureReader.h  Preprocessor.cpp  Preprocessor.h  README.md  Rectangle.cpp  Rectangle.h  RectanglesExtractor.cpp  RectanglesExtractor.h  RectanglesList.cpp  RectanglesList.h  main.cpp
